Update Req Params, Res, & Docs
