# API/routes/joboffer.route.js
@@ -16,13 +16,13 @@ const {verifyEmployer} = require('../services/verifyuser.service')
 // Employer Specfic Routes
 router.post('/', authenticateToken, verifyEmployer, postJobOffer);
 router.get('/myoffer', authenticateToken, verifyEmployer, viewOwnOffers);
-router.get('/myoffer/:id', authenticateToken, verifyEmployer, viewOneOffer);
-router.patch('/myoffer/:id', authenticateToken, verifyEmployer, editJobOffer);
-router.delete('/myoffer/:id', authenticateToken, verifyEmployer, deleteJobOffer);
+router.get('/myoffer/:offerid', authenticateToken, verifyEmployer, viewOneOffer);
+router.patch('/myoffer/:offerid', authenticateToken, verifyEmployer, editJobOffer);
+router.delete('/myoffer/:offerid', authenticateToken, verifyEmployer, deleteJobOffer);
 
 // Common Routes
 router.get('/', authenticateToken, viewJobOffers);
-router.get('/:id', authenticateToken, viewJobOffer);
+router.get('/:offerid', authenticateToken, viewJobOffer);
 router.post('/search/title', authenticateToken, searchJobOfferByTitle);
 router.post('/search/category', authenticateToken, searchJobOfferByCategory);
 router.post('/search/salary', authenticateToken, searchJobOfferBySalary);
